--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,12 @@ h1 {
 
 /* SECTION A ***********************************************/
 .img-a {
-	height: auto;
+	background-image: url(http://lorempixel.com/output/cats-q-c-400-300-9.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 140%;
+	background-color: pink;
+	height: 100%;
 	width: 100%;
 }
 
